fix reporte cuotas listado y descarga a pdf

--- a/apps/amcm/templates/amcm/reporte.html
+++ b/apps/amcm/templates/amcm/reporte.html
@@ -91,7 +91,7 @@
                                                 <a class="dropdown-item" href="/amcm/get_reporte_cuota_acumulado/?id={{ obj.id }}"><i class="far fa-list-alt"></i>Acumulado</a>
                                                 <a class="dropdown-item" href="/amcm/get_reporte_cuota_acumulado_pdf/?id={{ obj.id }}"><i class="far fa-file-pdf"></i> Acumulado</a>
                                                 <a class="dropdown-item" href="/amcm/get_reporte_cuota_pdf/?id={{ obj.id }}"><i class="far fa-file-pdf"></i> Cuotas</a>
-                                                <a class="dropdown-item" href="/amcm/get_reporte_lista_pdf/?id={{ obj.id }}"><i class="far fa-file-pdf"></i> Listado</a>
+                                                <a class="dropdown-item" href="/amcm/get_listado_elegibles_pdf/?evento_id={{ obj.id }}"><i class="far fa-file-pdf"></i> Listado</a>
                                             </div>
                                         </div>
                                     </td>
@@ -267,7 +267,7 @@
                                                 <a class="dropdown-item" href="/amcm/get_reporte_cuota_acumulado/?id={{ obj.id }}"><i class="far fa-list-alt"></i>Acumulado</a>
                                                 <a class="dropdown-item" href="/amcm/get_reporte_cuota_acumulado_pdf/?id={{ obj.id }}"><i class="far fa-file-pdf"></i> Acumulado</a>
                                                 <a class="dropdown-item" href="/amcm/get_reporte_cuota_pdf/?id={{ obj.id }}"><i class="far fa-file-pdf"></i> Cuotas</a>
-                                                <a class="dropdown-item" href="/amcm/get_reporte_lista_pdf/?id={{ obj.id }}"><i class="far fa-file-pdf"></i> Listado</a>
+                                                <a class="dropdown-item" href="/amcm/get_listado_elegibles_pdf/?evento_id={{ obj.id }}"><i class="far fa-file-pdf"></i> Listado</a>
                                             </div>
                                         </div>
                                     </td>
@@ -414,7 +414,7 @@
                                                 <a class="dropdown-item" href="/amcm/get_reporte_cuota_acumulado/?id={{ obj.id }}"><i class="far fa-list-alt"></i>Acumulado</a>
                                                 <a class="dropdown-item" href="/amcm/get_reporte_cuota_acumulado_pdf/?id={{ obj.id }}"><i class="far fa-file-pdf"></i> Acumulado</a>
                                                 <a class="dropdown-item" href="/amcm/get_reporte_cuota_pdf/?id={{ obj.id }}"><i class="far fa-file-pdf"></i> Cuotas</a>
-                                                <a class="dropdown-item" href="/amcm/get_reporte_lista_pdf/?id={{ obj.id }}"><i class="far fa-file-pdf"></i> Listado</a>
+                                                <a class="dropdown-item" href="/amcm/get_listado_elegibles_pdf/?evento_id={{ obj.id }}"><i class="far fa-file-pdf"></i> Listado</a>
                                             </div>
                                         </div>
                                     </td>
