--- a/apps/templates/includes/sidenav.html
+++ b/apps/templates/includes/sidenav.html
@@ -172,10 +172,28 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/amcm/get_reporte/">
-                            <i class="fas fa-chart-line text-secondary"></i>
+                        <a class="nav-link" {% if 'page-' in segment %} active {% endif %}"
+                            href="#navbar-reportes" data-toggle="collapse" role="button" aria-expanded="false"
+                            aria-controls="navbar-reportes">
+                            <i class="fas fa-file-invoice text-secondary"></i>
                             <span class="nav-link-text">Reportes</span>
                         </a>
+                        <div class="collapse" id="navbar-reportes">
+                            <ul class="nav nav-sm flex-column">
+                                <li class="nav-item">
+                                    <a href="/amcm/get_reporte/" class="nav-link {% if 'index' in segment %} active {% endif %}">
+                                        {#                                        <span class="sidenav-mini-icon"> D </span>#}
+                                        <span class="sidenav-normal"> Por Eventos </span>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="/amcm/get_reporte_recibos/" class="nav-link {% if 'index' in segment %} active {% endif %}">
+                                        {#                                        <span class="sidenav-mini-icon"> D </span>#}
+                                        <span class="sidenav-normal"> Recibos </span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </li>
                 </ul>
                 <!-- Divider -->
