fix paginacion tabla recibos vs pagos

--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -231,7 +231,8 @@
                             {#                </div>#}
                         </div>
                     </div>
-                    <div class="table-responsive">
+                    <div class="card widget-calendar">
+                        <div class="table-responsive">
 
                         <!-- Projects table -->
                         <table class="table table-sm w-100" id="result_list_rp">
@@ -270,50 +271,10 @@
 {#                                    <i class="fas fa-arrow-down text-warning mr-3"></i> 46,53%#}
 {#                                </td>#}
 {#                            </tr>#}
-{#                            <tr>#}
-{#                                <th scope="row">#}
-{#                                    /argon/charts.html#}
-{#                                </th>#}
-{#                                <td>#}
-{#                                    3,513#}
-{#                                </td>#}
-{#                                <td>#}
-{#                                    294#}
-{#                                </td>#}
-{#                                <td>#}
-{#                                    <i class="fas fa-arrow-down text-warning mr-3"></i> 36,49%#}
-{#                                </td>#}
-{#                            </tr>#}
-{#                            <tr>#}
-{#                                <th scope="row">#}
-{#                                    /argon/tables.html#}
-{#                                </th>#}
-{#                                <td>#}
-{#                                    2,050#}
-{#                                </td>#}
-{#                                <td>#}
-{#                                    147#}
-{#                                </td>#}
-{#                                <td>#}
-{#                                    <i class="fas fa-arrow-up text-success mr-3"></i> 50,87%#}
-{#                                </td>#}
-{#                            </tr>#}
-{#                            <tr>#}
-{#                                <th scope="row">#}
-{#                                    /argon/profile.html#}
-{#                                </th>#}
-{#                                <td>#}
-{#                                    1,795#}
-{#                                </td>#}
-{#                                <td>#}
-{#                                    190#}
-{#                                </td>#}
-{#                                <td>#}
-{#                                    <i class="fas fa-arrow-down text-danger mr-3"></i> 46,53%#}
-{#                                </td>#}
-{#                            </tr>#}
+
                             </tbody>
                         </table>
+                    </div>
                     </div>
                 </div>
             </div>
