--- a/apps/templates/includes/scripts.html
+++ b/apps/templates/includes/scripts.html
@@ -1,3 +1,5 @@
+
+<script type="text/javascript" src="/static/admin/js/jquery.init.js"></script>
 <script src="/static/assets/vendor/jquery/dist/jquery.min.js"></script>
 <script src="/static/assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/static/assets/vendor/js-cookie/js.cookie.js"></script>
@@ -15,6 +17,9 @@
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
 <script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
+
+<script src="/static/assets/vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+<script src="/static/assets/vendor/moment/moment.js"></script>
 
 <script>
     $(document).ready(function () {
@@ -53,3 +58,9 @@
 </script>
 
 
+ <script type="text/javascript">
+     $(document).ready(function () {
+      $('#datetimepicker1').datepicker({
+      });
+    });
+  </script>
