--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -126,7 +126,8 @@
     <div class="container-fluid mt--6">
         <div class="row">
             <div class="col-xl-8">
-                <div class="card bg-default">
+                <div class="card">
+
                     <div class="card-header bg-transparent">
                         <div class="row align-items-center">
                             <div class="col">
