--- a/apps/amcm/templates/amcm/listado_elegibles_pdf.html
+++ b/apps/amcm/templates/amcm/listado_elegibles_pdf.html
@@ -21,7 +21,7 @@
         th,
         td {
             text-align: left;
-            padding: 5px;
+            padding: 2px;
         }
 
         .striped:nth-child(even) {
@@ -232,7 +232,7 @@
         <tbody>
          {% for obj in cuadras %}
 
-                <tr style="font-size: 12px;">
+                <tr style="font-size: 12px; border-top: white; border-bottom: white; border-bottom-width: 0; border-top-width: 0;">
                     <td width="5%">&nbsp;</td>
                     <td width="30%" colspan="2"><strong>{{ obj.cuadra.nombre }}</strong></td>
 
@@ -254,8 +254,8 @@
                 {% for ejemplar_obj in obj.ejemplar %}
                     <tr style="font-size: 11px; border-width: 1px; border-style: solid; border-color: #0a0c0d; text-align: center; padding-top: 2px; padding-bottom: 2px; margin-top: 5px; margin-bottom: 5px;">
                         <td width="5%">{{ ejemplar_obj.consecutivo }}</td>
-                        <td width="5%" style="border-style: solid; border-width: 1px; border-top-color: #0a0c0d;">{{ ejemplar_obj.lote }}</td>
-                        <td width="25%" style="border-style: solid; border-width: 1px; border-top-color: #0a0c0d;"> {{ ejemplar_obj.nombre }}</td>
+                        <td width="5%">{{ ejemplar_obj.lote }}</td>
+                        <td width="25%"> {{ ejemplar_obj.nombre }}</td>
                         <td>
                             <table>
                                 <tr>
