--- a/apps/amcm/templates/amcm/reporte_recibos.html
+++ b/apps/amcm/templates/amcm/reporte_recibos.html
@@ -34,26 +34,12 @@
                     <div class="card-header border-0">
                         <h3 class="mb-0">Recibos</h3>
 
-                        <div class="input-daterange datepicker row align-items-center">
-                            <div class="col">
-                                <div class="form-group">
-                                    <div class="input-group input-group-alternative">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text"><i class="ni ni-calendar-grid-58"></i></span>
-                                        </div>
-                                        <input class="form-control" placeholder="Start date" type="text" value="06/18/2020">
-                                    </div>
+                        <div class="form-group">
+                            <div class="input-group input-group-alternative">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text"><i class="ni ni-calendar-grid-58"></i></span>
                                 </div>
-                            </div>
-                            <div class="col">
-                                <div class="form-group">
-                                    <div class="input-group input-group-alternative">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text"><i class="ni ni-calendar-grid-58"></i></span>
-                                        </div>
-                                        <input class="form-control" placeholder="End date" type="text" value="06/22/2020">
-                                    </div>
-                                </div>
+                                <input id="datetimepicker1" class="form-control" placeholder="Select date" type="text" value="06/20/2020">
                             </div>
                         </div>
                     </div>
@@ -109,6 +95,6 @@
 
 <!-- Specific JS goes HERE -->
 {% block javascripts %}
-    <script src="/assets/js/plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+
 {% endblock javascripts %}
 
