datepicker, evento en reporte de recibos

--- a/apps/amcm/templates/amcm/reporte_recibos_pdf.html
+++ b/apps/amcm/templates/amcm/reporte_recibos_pdf.html
@@ -163,6 +163,8 @@
 <div style="width: 500px;" id="content_frame">
     <h2 style="font-size: 15px;line-height: 22px; padding-top: 4px;" align="center">Asociación Mexicana de Criadores y Caballistas de Caballos Cuarto de Milla A.C.</h2>
     <h3 style="font-size: 15px;line-height: 19px; padding-top: 4px;" align="center">Reporte de  Recibos</h3>
+    <hr>
+    <h4> {{ filtros }}</h4>
     <table class="table table-flush" id="result_list" border="1px">
         <thead class="thead-light">
         <tr style="font-size: 12px;line-height: 19px; padding-top: 4px;" align="center">
