--- a/apps/amcm/templates/amcm/reporte_recibos.html
+++ b/apps/amcm/templates/amcm/reporte_recibos.html
@@ -1,9 +1,10 @@
 {% extends 'layouts/base.html' %}
-
+{% load tz %}
 {% block title %} Tables {% endblock title %}
 
 {% block content %}
-
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="/static/assets/ajax/reportes.js"></script>
     <div class="header pb-6">
         <div class="container-fluid">
             <div class="header-body">
@@ -18,7 +19,6 @@
                         </nav>
                     </div>
                     <div class="col-lg-6 col-5 text-right">
-                        <a href="/amcm/get_reporte_recibos_pdf/" class="btn btn-sm btn-neutral"><i class="far fa-file-alt"></i> Descargar</a>
                     </div>
                 </div>
             </div>
@@ -32,16 +32,65 @@
                 <div class="card">
                     <!-- Card header -->
                     <div class="card-header border-0">
-                        <h3 class="mb-0">Recibos</h3>
+{#                        <h3 class="mb-0">Recibos</h3>#}
+{#                        <br>#}
+                        <h5>Selecciona un filtro: </h5>
+                        <div class="input-daterange datepicker row align-items-center">
+                            <div class="col">
+                                <div class="form-group">
+                                    <div class="input-group input-group-alternative">
 
-                        <div class="form-group">
-                            <div class="input-group input-group-alternative">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text"><i class="ni ni-calendar-grid-58"></i></span>
+                                         <select class="form-control select2" id="evento" placeholder="Evento">
+                                              <option value="">Selecciona Evento:</option>
+                                              {% for obj in eventos %}
+                                                  <option value="{{ obj.id }}">{{ obj.nombre}}</option>
+                                              {% endfor %}
+                                          </select>
+                                    </div>
                                 </div>
-                                <input id="datetimepicker1" class="form-control" placeholder="Select date" type="text" value="06/20/2020">
+                            </div>
+                            <div class="col">
+                                <div class="form-group">
+                                    <div class="input-group input-group-alternative">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"><i class="ni ni-calendar-grid-58"></i></span>
+                                        </div>
+                                        <input class="form-control" id="fecha_de" placeholder="Desde:" type="text" value="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="form-group">
+                                    <div class="input-group input-group-alternative">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"><i class="ni ni-calendar-grid-58"></i></span>
+                                        </div>
+                                        <input class="form-control" id="fecha_a" placeholder="Hasta:" type="text" value="">
+                                    </div>
+                                </div>
                             </div>
                         </div>
+                        <div>
+                            <div class="col text-right">
+                                <button class="btn btn-icon btn-3 btn-neutral" type="button" id="descarga">
+                                    <span class="btn-inner--icon"><i class="ni ni-cloud-download-95"></i></span>
+
+                                    <span class="btn-inner--text">Descargar</span>
+
+                                </button>
+{#                                 <a href="#" id="descarga" class="btn btn-sm btn-neutral"><i class="far fa-file-alt"></i> Descargar</a>#}
+{#                                &nbsp;&nbsp;&nbsp;#}
+                                <button class="btn btn-icon btn-3 btn-primary" type="button" id="filtrar">
+                                    <span class="btn-inner--icon"><i class="ni ni-zoom-split-in"></i></span>
+
+                                    <span class="btn-inner--text">Filtrar</span>
+
+                                </button>
+
+                            </div>
+                        </div>
+                    <hr>
+                    <h4> {{ filtros }}</h4>
                     </div>
 
                     <div class="table-responsive pb-4">
@@ -90,6 +139,7 @@
      {% include "includes/footer.html" %}
 
     </div>
+
 
 {% endblock content %}
 
