--- a/apps/amcm/templates/amcm/reporte_recibos.html
+++ b/apps/amcm/templates/amcm/reporte_recibos.html
@@ -13,7 +13,7 @@
                         <h6 class="h2 d-inline-block mb-0">Reporte de Recibos</h6>
                         <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
                             <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
-                                <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
+                                <li class="breadcrumb-item"><a href="/"><i class="fas fa-home"></i></a></li>
                                 <li class="breadcrumb-item active" aria-current="page">Inicio</li>
                             </ol>
                         </nav>
