se agrega al admin el modelo de evento elegibles para poder marcar los retirados  en grupo desde el change list , agregar ejemplares por inscripcion o eliminar participantes

--- a/apps/templates/includes/sidenav.html
+++ b/apps/templates/includes/sidenav.html
@@ -26,9 +26,9 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if 'icons' in segment %} active {% endif %}" href="/admin/amcm/inscripcion/">
+                        <a class="nav-link {% if 'icons' in segment %} active {% endif %}" href="/amcm/get_eventos_ejemplares/">
                             <i class="ni ni-trophy text-secondary"></i>
-                            <span class="nav-link-text">Incrpipción</span>
+                            <span class="nav-link-text">Ejemplares por Evento</span>
                         </a>
                     </li>
 
