--- a/apps/templates/admin/pagination.html
+++ b/apps/templates/admin/pagination.html
@@ -8,5 +8,7 @@
 {% endif %}
 {{ cl.result_count }} {% if cl.result_count == 1 %}{{ cl.opts.verbose_name }}{% else %}{{ cl.opts.verbose_name_plural }}{% endif %}
 {% if show_all_url %}<a href="{{ show_all_url }}" class="showall">{% translate 'Show all' %}</a>{% endif %}
-{% if cl.formset and cl.result_count %}<input type="submit" name="_save" class="default" value="{% translate 'Save' %}">{% endif %}
+</p>
+<p style="text-align: end">
+{% if cl.formset and cl.result_count %}<input type="submit" name="_save" class="default btn btn-secondary" value="{% translate 'Save' %}">{% endif %}
 </p>
