--- a/apps/amcm/templates/amcm/recibo_impresora.html
+++ b/apps/amcm/templates/amcm/recibo_impresora.html
@@ -225,32 +225,32 @@
         <tbody>
         <tr style="border: 0px solid #000;">
             <td style="padding-left: 5px;padding-top: 8px;width: 90%"><p
-                    style="margin-left: 100px;margin-top: 0px; margin-bottom: 0px;font-size: 20px; "><strong> {{ usuario }}</strong></p></td>
+                    style="margin-left: 100px;margin-top: 0px; margin-bottom: 0px;font-size: 20px; ">{{ usuario }}</p></td>
         </tr>
         <tr style="border: 0px solid #000">
             <td style="padding-left: 5px;padding-top: 0px;width: 90%"><p
-                    style="margin-left: 100px;margin-top: 0px; margin-bottom: 0px;font-size: 16px"><strong>{{ importe }} {{ importe_letra }}</strong></p></td>
+                    style="margin-left: 100px;margin-top: 0px; margin-bottom: 0px;font-size: 16px">{{ importe }} {{ importe_letra }}</p></td>
         </tr>
         <tr><td><br>
         <tr style="border: 0px solid #000">
             <td style="padding-left: 5px;padding-top: 3px;width: 90%"><p
-                    style="margin-left: 100px;margin-top: 0px; margin-bottom: 0px;font-size: 20px; "><strong>{{ concepto }}</strong></p></td>
+                    style="margin-left: 100px;margin-top: 0px; margin-bottom: 0px;font-size: 20px; ">{{ concepto }}</p></td>
         </tr>
         <tr style="border: 0px solid #000"  >
             <td valign="top" style="padding-left: 5px;padding-top: 0px;width: 90%" >
-                <p style="margin-top: 0px; margin-bottom: 0px;font-size: 20px"><strong>{{ evento }}</strong></p></td>
+                <p style="margin-top: 0px; margin-bottom: 0px;font-size: 20px">{{ evento }}</p></td>
         </tr>
 
         <tr style="border: 0px solid #000">
             <td valign="top" style="padding-left: 5px;padding-top: 0px;width: 90%">
-                <p style="margin-top: 0px; margin-bottom: 0px;font-size: 20px"><strong>
+                <p style="margin-top: 0px; margin-bottom: 0px;font-size: 20px">
                     {% for obj in ejemplares %}
                         {{ obj }}
                         {% if not forloop.last %}
                                 , &nbsp;
                             {% endif %}
                     {% endfor %}
-                </strong></p>
+                </p>
             </td>
         </tr>
 
@@ -258,7 +258,7 @@
 
         <tr style="border: 0px solid #000">
             <td valign="top" style="padding-left: 5px;padding-top: 3px;width: 90%">
-                <p style="margin-left: 100px;margin-top: 0px; margin-bottom: 0px;font-size: 15px"><strong>
+                <p style="margin-left: 100px;margin-top: 0px; margin-bottom: 0px;font-size: 16px">
                     {% if recibido_en %}
                         {% for obj  in recibido_en  %}
                             {{ obj.nombre }} &nbsp;&nbsp;
@@ -270,7 +270,7 @@
                             {% endif %}
                         {% endfor %}
                     {% endif %}
-                </strong></p>
+                </p>
             </td>
         </tr>
         <tr style="border: 0px solid #000">
