--- a/apps/amcm/templates/amcm/recibo_impresora.html
+++ b/apps/amcm/templates/amcm/recibo_impresora.html
@@ -202,7 +202,7 @@
 
                 <table>
                     <tr style="height: 5px">
-                        <td colspan="3" style="height: 5px"></td>
+                        <td colspan="3" style="height: 20px"></td>
                     </tr>
                     <tr style="text-align: center;">
                         <td style="text-align: center;"><p style="margin-top: 0px; margin-bottom: 0px;font-size: 20px">
@@ -229,7 +229,7 @@
         </tr>
         <tr style="border: 0px solid #000">
             <td style="padding-left: 5px;padding-top: 0px;width: 90%"><p
-                    style="margin-left: 100px;margin-top: 0px; margin-bottom: 0px;font-size: 16px">{{ importe }} {{ importe_letra }}</p></td>
+                    style="margin-left: 100px;margin-top: 0px; margin-bottom: 0px;font-size: {{ font_size_letra }}px">{{ importe }} {{ importe_letra }}</p></td>
         </tr>
         <tr><td><br>
         <tr style="border: 0px solid #000">
@@ -238,12 +238,12 @@
         </tr>
         <tr style="border: 0px solid #000"  >
             <td valign="top" style="padding-left: 5px;padding-top: 0px;width: 90%" >
-                <p style="margin-top: 0px; margin-bottom: 0px;font-size: 20px">{{ evento }}</p></td>
+                <p style="margin-top: 0px; margin-bottom: 0px;font-size: {{ font_size_evento }}px">{{ evento }}</p></td>
         </tr>
 
         <tr style="border: 0px solid #000">
             <td valign="top" style="padding-left: 5px;padding-top: 0px;width: 90%">
-                <p style="margin-top: 0px; margin-bottom: 0px;font-size: 20px">
+                <p style="margin-top: 0px; margin-bottom: 0px;font-size: {{ font_size_caballos }}px">
                     {% for obj in ejemplares %}
                         {{ obj }}
                         {% if not forloop.last %}
@@ -253,8 +253,12 @@
                 </p>
             </td>
         </tr>
+        <tr><td>
+        {% for obj  in renglones  %}
+            <br>
+        {% endfor %}
+        </td></tr>
 
-        <tr><td><br><br><br>
 
         <tr style="border: 0px solid #000">
             <td valign="top" style="padding-left: 5px;padding-top: 3px;width: 90%">
