--- a/apps/templates/includes/scripts.html
+++ b/apps/templates/includes/scripts.html
@@ -48,7 +48,7 @@
          // $('#id_cuadra').attr('multiple', 'multiple');
         //  document.getElementById("id_observaciones").rows = 3;
         // document.getElementById("id_descripcion_evento").rows = 4;
-
+$('.field-pago').addClass('text-wrap');
     });
 </script>
 <script>
