--- a/apps/amcm/templates/amcm/recibo_impresora.html
+++ b/apps/amcm/templates/amcm/recibo_impresora.html
@@ -190,10 +190,10 @@
             </td>
         </tr>
         <tr>
-            <td style="width: 33%;text-align: left">
+            <td style="width: 35%;text-align: left">
                 <p style="font-size: 10px;line-height: 0px;"></p>
             </td>
-            <td style="width: 33%;text-align: right">
+            <td style="width: 35%;text-align: right">
                 <p style="font-size: 10px;line-height: 0px; margin-right: 10px;"></p>
             </td>
             <td style="width: 20%; text-align: center; border: 0px solid #000">
@@ -202,7 +202,7 @@
 
                 <table>
                     <tr style="height: 5px">
-                        <td colspan="3" style="height: 30px"></td>
+                        <td colspan="3" style="height: 5px"></td>
                     </tr>
                     <tr style="text-align: center;">
                         <td style="text-align: center;"><p style="margin-top: 0px; margin-bottom: 0px;font-size: 20px">
@@ -221,76 +221,68 @@
         </tr>
     </table>
 
-    <table style="width: 100%;">
+    <table style="width: 100%; table-layout:fixed;" >
         <tbody>
-        <tr style="border: 0px solid #000;">
-            <td style="padding-left: 5px;padding-top: 8px;width: 90%"><p
-                    style="margin-left: 100px;margin-top: 0px; margin-bottom: 0px;font-size: 20px; ">{{ usuario }}</p></td>
+        <tr style="border: 0px">
+            <td style="padding-left: 62px;padding-bottom: 0px;padding-top:5px;height: 40px;width: 90%;font-size: 20px">
+                {{ usuario }} </td>
         </tr>
         <tr style="border: 0px solid #000">
-            <td style="padding-left: 5px;padding-top: 0px;width: 90%"><p
-                    style="margin-left: 100px;margin-top: 0px; margin-bottom: 0px;font-size: {{ font_size_letra }}px">{{ importe }} {{ importe_letra }}</p></td>
+            <td style="padding-left: 62px;padding-bottom: 0px;padding-top:0px;height: 30px;width: 90%;font-size: {{ font_size_letra }}px">
+                {{ importe }} {{ importe_letra }}</td>
         </tr>
-        <tr><td>
+        <tr><td style="padding-top:23px;"></td></tr>
         <tr style="border: 0px solid #000">
-            <td style="padding-left: 5px;padding-top: 3px;width: 90%"><p
-                    style="margin-left: 100px;margin-top: 0px; margin-bottom: 0px;font-size: 20px; ">{{ concepto }}</p></td>
+            <td style="padding-left: 62px;padding-bottom: 0px;padding-top:0px;height: 30px;width: 90%;font-size: 20px">
+                {{ concepto }}</td>
         </tr>
         <tr style="border: 0px solid #000"  >
-            <td valign="top" style="padding-left: 5px;padding-top: 0px;width: 90%" >
-                <p style="margin-top: 0px; margin-bottom: 0px;font-size: {{ font_size_evento }}px">{{ evento }}</p></td>
+            <td valign="top" style="padding-left: 5px;padding-bottom: 0px;padding-top:0px;height: {{ ancho_evento }}px;width: 90%;font-size: 20px" >
+                {{ evento }}</td>
         </tr>
 
         <tr style="border: 0px solid #000">
-            <td valign="top" style="padding-left: 5px;padding-top: 0px;width: 90%">
-                <p style="margin-top: 0px; margin-bottom: 0px;font-size: {{ font_size_caballos }}px">
+            <td valign="top" style="padding-left: 5px;padding-bottom: 0px;padding-top:0px;height: {{ ancho_caballos }}px;width: 90%;font-size: {{ font_size_caballos }}px">
+
                     {% for obj in ejemplares %}
                         {{ obj }}
                         {% if not forloop.last %}
-                                , &nbsp;
+                                ,
                             {% endif %}
                     {% endfor %}
-                </p>
+
             </td>
         </tr>
-        <tr><td>
-        {% for obj  in renglones  %}
-            <br>
-        {% endfor %}
-        </td></tr>
 
 
         <tr style="border: 0px solid #000">
-            <td valign="top" style="padding-left: 5px;padding-top: 3px;width: 90%">
-                <p style="margin-left: 100px;margin-top: 0px; margin-bottom: 0px;font-size: 16px">
+            <td valign="top" style="padding-left: 62px;padding-bottom: 0px;padding-top:0px;height: 60px;width: 90%;font-size: {{ font_size_recibido }}px">
+
                     {% if recibido_en %}
                         {% for obj  in recibido_en  %}
-                            {{ obj.nombre }} &nbsp;&nbsp;
-                            {{ obj.referencia }} &nbsp;&nbsp;
-                            $ {{ obj.importe }} &nbsp;&nbsp;
+                            {{ obj.nombre }}
+                            {{ obj.referencia }}
+                            $ {{ obj.importe }}
                             {{ obj.fecha }}
                             {% if not forloop.last %}
-                                -- &nbsp;
+                                ,
                             {% endif %}
                         {% endfor %}
                     {% endif %}
-                </p>
+
             </td>
         </tr>
-        <tr style="border: 0px solid #000">
-            <td style="padding-left: 5px;padding-top: 2px;height: 27px;width: 90%"><p
-                    style="margin-top: 0px; margin-bottom: 0px;font-size: 18px"></p></td>
-        </tr>
+
         </tbody>
     </table>
 
     <table style="width: 100%;">
         <tr>
-            <td style="width: 10%"></td>
+            <td style="width: 5%"></td>
             <td valign="top" style="width: 65%">
                 <table>
                     <tr>
-                        <td style="width: 60%; font-size: 17px">{{ saldo }}</td>
+                        <td style="width: 60%; font-size: 15px">{{ saldo }}</td>
                         <td style="width: 20%"></td>
                         <td style="width: 20%">
 
@@ -300,10 +292,10 @@
 
                 </table>
             </td>
-            <td style="width: 25%">
+            <td style="width: 30%">
                 <table>
                     {% for item in cuentas %}
-                        <tr style="border: 0px solid #000;">
+                        <tr style="border: 0px solid #000; height: 30px">
                             <td style="width: 50%; text-align: center">
                                 <span style="font-size: 20px">{{ item.codigo }} </span> &nbsp;
                                 <span style="font-size: 15px"> {{item.importe}}</span> &nbsp;
