--- a/apps/amcm/templates/amcm/recibo_impresora.html
+++ b/apps/amcm/templates/amcm/recibo_impresora.html
@@ -22,7 +22,7 @@
 
 
         table {
-            border-collapse: collapse;
+
             width: 100%;
         }
 
@@ -31,8 +31,9 @@
         th,
         td {
             text-align: left;
-            padding: 0px;
-            font-family: Helvetica;
+
+            padding-bottom:0px;
+
         }
 
         .striped:nth-child(even) {
@@ -221,24 +222,24 @@
         </tr>
     </table>
 
-    <table style="width: 100%; table-layout:fixed;" >
-        <tbody>
-        <tr style="border: 0px">
+    <table style="width: 100%; border-collapse: collapse;padding: 0px;"  >
+
+        <tr >
             <td style="padding-left: 62px;padding-bottom: 0px;padding-top:5px;height: 37px;width: 90%;font-size: 18px">
-                {{ usuario }} </td>
+                <span style="font-size: 20px">{{ usuario }} </span>  </td>
         </tr>
-        <tr style="border: 0px solid #000">
-            <td style="padding-left: 62px;padding-bottom: 0px;padding-top:0px;height: 27px;width: 90%;font-size: {{ font_size_letra }}px">
-                {{ importe }} {{ importe_letra }}</td>
+        <tr style="border: 0px solid #000; height: 22px;">
+            <td style="padding-left: 62px;padding-bottom: 0px;padding-top:0px;width: 90%;">
+                <span style="font-size: {{ font_size_letra }}px">{{ importe }} {{ importe_letra }} </span> </td>
         </tr>
-        <tr><td style="padding-top:18px;"></td></tr>
-        <tr style="border: 0px solid #000">
-            <td style="padding-left: 62px;padding-bottom: 0px;padding-top:0px;height: 27px;width: 90%;font-size: 18px">
-                {{ concepto }}</td>
+        <tr><td style="padding-top:20px;"></td></tr>
+        <tr style="border: 0px solid #000;height: 22px;">
+            <td style="padding-left: 62px;padding-bottom: 0px;padding-top:0px;width: 90%;">
+                <span style="font-size: 18px">{{ concepto }} </span></td>
         </tr>
-        <tr style="border: 0px solid #000"  >
-            <td valign="top" style="padding-left: 5px;padding-bottom: 0px;padding-top:0px;height: {{ ancho_evento }}px;width: 90%;font-size: 18px" >
-                {{ evento }}</td>
+        <tr style="border: 0px solid #000;height: {{ ancho_evento }}px;"  >
+            <td  style="padding-left: 5px;padding-bottom: 0px;padding-top:0px;width: 90%;" >
+                <span style="font-size: 18px">{{ evento }} </span></td>
         </tr>
 
         <tr style="border: 0px solid #000">
@@ -273,7 +274,6 @@
             </td>
         </tr>
 
-        </tbody>
     </table>
 
     <table style="width: 100%;">
@@ -293,11 +293,11 @@
                 </table>
             </td>
             <td style="width: 30%">
-                <table>
+                <table >
                     {% for item in cuentas %}
-                        <tr style="border: 0px solid #000; height: 30px">
+                        <tr style="border: 0px solid #000; height: 25px">
                             <td style="width: 50%; text-align: center">
-                                <span style="font-size: 18px">{{ item.codigo }} </span> &nbsp;
+                                <span style="font-size: 20px">{{ item.codigo }} </span> &nbsp;
                                 <span style="font-size: 15px"> {{item.importe}}</span> &nbsp;
 
                             </td>
