--- a/apps/amcm/templates/amcm/recibo_impresora.html
+++ b/apps/amcm/templates/amcm/recibo_impresora.html
@@ -224,8 +224,8 @@
 
     <table style="width: 100%; border-collapse: collapse;padding: 0px;"  >
 
-        <tr >
-            <td style="padding-left: 62px;padding-bottom: 0px;padding-top:5px;height: 37px;width: 90%;font-size: 18px">
+        <tr style="border: 0px solid #000; height: 37px;">
+            <td style="padding-left: 62px;padding-bottom: 4px;padding-top:0px;width: 90%;vertical-align: bottom">
                 <span style="font-size: 18px">{{ usuario }} </span>  </td>
         </tr>
         <tr style="border: 0px solid #000; height: 22px;">
