--- a/apps/amcm/templates/amcm/recibo_impresora.html
+++ b/apps/amcm/templates/amcm/recibo_impresora.html
@@ -233,14 +233,14 @@
                 <span style="font-size: {{ font_size_letra }}px">{{ importe }} {{ importe_letra }} </span> </td>
         </tr>
         <tr><td style="padding-top:20px;"></td></tr>
-        <tr style="border: 0px solid #000;height: 22px;">
-            <td style="padding-left: 62px;padding-bottom: 0px;padding-top:0px;width: 90%;">
-                <span style="font-size: 18px">{{ concepto }} </span></td>
+        <tr style="border: 0px solid #000;height: {{ ancho_evento }}px;">
+            <td style="padding-left: 62px;padding-bottom: 0px;padding-top:0px;width: 90%">
+                <span style="font-size: {{ font_size_evento }}px">{{ concepto }}, {{ evento }} </span></td>
         </tr>
-        <tr style="border: 0px solid #000;height: {{ ancho_evento }}px;"  >
+        <!--<tr style="border: 0px solid #000;height: {{ ancho_evento }}px;"  >
             <td  style="padding-left: 5px;padding-bottom: 0px;padding-top:0px;width: 90%;" >
                 <span style="font-size: 18px">{{ evento }} </span></td>
-        </tr>
+        </tr> -->
 
         <tr style="border: 0px solid #000">
             <td valign="top" style="padding-left: 5px;padding-bottom: 0px;padding-top:0px;height: {{ ancho_caballos }}px;width: 90%;font-size: {{ font_size_caballos }}px">
