--- a/apps/templates/admin/change_list.html
+++ b/apps/templates/admin/change_list.html
@@ -72,10 +72,11 @@
             <div class="col">
                 <div class="card">
 
+
                     <div class="card-body">
                         <div class="module{% if cl.has_filters %} filtered{% endif %}" id="changelist">
                             <div class="changelist-form-container">
-{#                                {% block search %}{% search_form cl %}{% endblock %}#}
+                                {% block search %}{% search_form cl %}{% endblock %}
                                 {% block date_hierarchy %}{% if cl.date_hierarchy %}{% date_hierarchy cl %}
                                 {% endif %}{% endblock %}
 
