valing top celda de cantidad

--- a/apps/amcm/templates/amcm/recibo_impresora.html
+++ b/apps/amcm/templates/amcm/recibo_impresora.html
@@ -229,7 +229,7 @@
                 <span style="font-size: 18px">{{ usuario }} </span>  </td>
         </tr>
         <tr style="border: 0px solid #000; height: 35px;">
-            <td style="padding-left: 62px;padding-bottom: 0px;padding-top:0px;width: 90%;">
+            <td style="padding-left: 62px;padding-bottom: 0px;padding-top:0px;width: 90%;" valign="top">
                 <span style="font-size: {{ font_size_letra }}px">{{ importe }} {{ importe_letra }} </span> </td>
         </tr>
         <tr><td style="padding-top:7px;"></td></tr>
