--- a/apps/amcm/templates/amcm/evento_cuotas_pdf.html
+++ b/apps/amcm/templates/amcm/evento_cuotas_pdf.html
@@ -234,7 +234,7 @@
         <table width="100%" align="center">
             <tr>
                 <td style="width: 100%" >
-                    <p style="font-size: 12px;text-align: center">Ciudad de México a 6 de Abril de 2022.</p>
+                    <p style="font-size: 12px;text-align: center">Ciudad de México a {{ fecha }}.</p>
                 </td>
             </tr>
             <tr>
