--- a/apps/templates/includes/sidenav.html
+++ b/apps/templates/includes/sidenav.html
@@ -26,6 +26,12 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link {% if 'icons' in segment %} active {% endif %}" href="/amcm/get_view_deudores/">
+                            <i class="ni ni-trophy text-secondary"></i>
+                            <span class="nav-link-text">Deudores</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link {% if 'icons' in segment %} active {% endif %}" href="/amcm/get_eventos_ejemplares/">
                             <i class="ni ni-trophy text-secondary"></i>
                             <span class="nav-link-text">Ejemplares por Evento</span>
