--- a/apps/amcm/templates/amcm/estado_cuenta.html
+++ b/apps/amcm/templates/amcm/estado_cuenta.html
@@ -31,12 +31,14 @@
      <table  align="center" cellspacing="0" cellpadding="0" border="0" width="100%" style="border-color: transparent; border-width: 0px; border-style: hidden; table-layout: fixed; width: max-content;">
 
                 <tr style="border-color: transparent; border-width: 0px; border-style: hidden; padding: 5px;">
-                    <td colspan="2" width="100%" style="background-color:#009551; color: #fff;  font-weight: bold; font-family: Arial; font-size: 14px; text-align: center;">DEUDORES</td>
+                    <td colspan="3" width="100%" style="background-color:#009551; color: #fff;  font-weight: bold; font-family: Arial; font-size: 14px; text-align: center;">DEUDORES</td>
                 </tr>
-                <tr style="border-color: transparent; border-width: 0px; border-style: hidden; padding: 3px;">
+                <tr style="border-color: transparent; border-width: 0px; padding: 3px;">
 
-                    <td width="20%"><span style="font-weight: bold; color: #0B3957; font-family: Arial; font-size: 12px; text-align: right;">Cuadra: </span> </td>
-                    <td width="80%"><span style="font-weight: bold; color: #000000; font-family: Arial; font-size: 12px; text-align: left;">{{cuadra.nombre}} </span> </td>
+                    <td width="10%" style="font-weight: bold; color: #0B3957; font-family: Arial; font-size: 12px; text-align: left;"><span >Cuadra: </span> </td>
+                    <td width="60%" style="font-weight: bold; color: #000000; font-family: Arial; font-size: 12px; text-align: left;"><span >{{cuadra.nombre}} </span> </td>
+                    <td width="30%" style="font-weight: bold; color: #000000; font-family: Arial; font-size: 12px; text-align: right;"><span >{{fecha_reporte}} </span> </td>
+
 
                 </tr>
 
@@ -57,7 +59,7 @@
                 {% for obj in estado_cuenta  %}
                     <tr  style="border-color: #C0C0C0;  border-width: 1px;vertical-align: middle" >
                         <td style="padding: 5px;vertical-align: middle">{{ obj.fecha }}</td>
-                        <td style="padding: 5px;vertical-align: middle">{{ obj.concepto }}</td>
+                        <td style="padding: 5px;vertical-align: middle">{{ obj.concepto }} <strong>{{ obj.ejemplares }}</strong></td>
                         <td style="padding: 5px;vertical-align: middle;text-align: right">{{ obj.debe }}</td>
                         <td style="padding: 5px;vertical-align: middle;text-align: right">{{ obj.haber }}</td>
                         <td style="padding: 5px;vertical-align: middle;text-align: right">{{ obj.saldo }}</td>
