--- a/apps/amcm/templates/amcm/vista_reporte_pagos.html
+++ b/apps/amcm/templates/amcm/vista_reporte_pagos.html
@@ -3,7 +3,7 @@
 {% block title %} Tables {% endblock title %}
 
 {% block content %}
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="/static/assets/ajax/estado_cuenta_pagos.js"></script>
     <div class="header pb-6">
